snapcmakemodules (1.0.68.0~bionic) bionic; urgency=high

  * Added a test to make sure I have the dh-sysuser in the control file when
    there is at least one <name>.sysuser file.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 06 Nov 2022 08:28:27 -0800

snapcmakemodules (1.0.67.0~bionic) bionic; urgency=high

  * Use `-std=gnu++17` instead of `-std=c++17`.
  * Applied a fix so gnu++17 works with Qt on Ubuntu 18.04.
  * Added a script to run the tests and catch exceptions.
  * Removed the fixed cmake version 3.5.
  * Got the CheckCXXAbstractClass.cmake to work again (as a result).

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 30 Oct 2022 20:54:31 -0700

snapcmakemodules (1.0.66.0~bionic) bionic; urgency=high

  * Added the --source-dir to the tests run by the mk script.
  * Added the --tg option to the mk script to start tests in gdb.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 12 Jun 2022 22:19:38 -0700

snapcmakemodules (1.0.65.0~bionic) bionic; urgency=high

  * Install the CheckCXXAbstractClass module in the right directory.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 04 Jun 2022 09:35:10 -0700

snapcmakemodules (1.0.64.0~bionic) bionic; urgency=high

  * Fixed the compat version.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 19 May 2022 20:23:29 -0700

snapcmakemodules (1.0.63.0~bionic) bionic; urgency=high

  * Fixed dependencies cleanup using a python script.
  * Fixed a case where the wrong error code was checked in `mk`.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 19 May 2022 09:19:20 -0700

snapcmakemodules (1.0.62.0~bionic) bionic; urgency=high

  * Enhanced the coverage script (rmdir tmp, --source-dir, echo cmd).
  * Moved the tmp & coverage directories to the BUILD directory.
  * Offer a QUIET mode for Doxygen so by default we ignore the missing package.
  * Handle the PROCESSOR variable instead of just `nproc`.
  * Updated to work with Catch2 version 3.
  * Bumped copyright notice to 2022.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 30 Jan 2022 18:09:42 -0800
